--- a/filterpage.css
+++ b/filterpage.css
@@ -1,37 +1,67 @@
 body {
+  margin: 0;
   font-family: serif;
 }
 
-.header {
+.topnav {
   overflow: hidden;
-  background-color: #f9f9f9;
+  background-color: black;
+  /*background-color: #f9f9f9;*/
   padding: 20px 10px;
 }
 
-.header a {
+.topnav a {
   float: left;
+  display: block;
   color: black;
   text-align: center;
   padding: 10px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 15px;
+  text-decoration: none;
   border-radius: 6px;
 }
 
-.header a:hover {
+.topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.header a.active {
+.topnav a.active {
   background-color: dodgerblue;
   color: white;
 }
 
-.header a.notactive {
-  
+.topnav a.notactive {
+  color: orange;
 }
 
-.header-right {
+.topnav-right {
   float: right;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
