--- a/results.css
+++ b/results.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Merriweather;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h2 {
@@ -35,8 +35,9 @@ p {
 }
 
 .navbar a:hover {
-  background-color: lightgrey;
-  /*color: grey;*/
+  /*background-color: lightgrey;*/
+  background-color: #00ec82;
+  -webkit-transition-duration: 0.4s;
 }
 
 .active {
@@ -88,12 +89,15 @@ p {
 }
 
 .filterbar {
-  background-color: #FAFAFA;
+  font-family: Montserrat;
+  /*background-color: #FAFAFA;*/
+  background-color: #F5F5F5;
   position: relative;
   float:left;
-  border-style: solid;
+  /*border-style: solid;
   border-color: black;
-  border-width: 2px;
+  border-width: 2px;*/
+
   margin-left: 75px;
   width: 300px;
   height: 600px;
@@ -118,7 +122,8 @@ form.searchinfilter input[type=text] {
   border: 1px solid grey;
   float: left;
   width: 80%;
-  background: #f1f1f1;
+  background: #F5F5F5;
+  /*background: #f1f1f1;*/
 }
 
 form.searchinfilter button {
@@ -132,6 +137,10 @@ form.searchinfilter button {
   border: 1px solid grey;
   border-left: none;
   cursor: pointer;
+}
+
+form.searchinfilter button:hover {
+  background-color: #00ec82;
 }
 
 #distance-bar {
@@ -203,4 +212,65 @@ form.searchinfilter button {
 #updatedmiles {
   float: right;
   margin-top:-35px;
+}
+
+.UpdateResults {
+  background-color: #07f29c;
+  font-family: sans-serif;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  margin-left: 80px;
+  border-radius: 23px;
+
+}
+
+.UpdateResults:hover {
+  background-color: #00ec82;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.lds-facebook {
+  display: none;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 6px;
+  width: 13px;
+  background: #e2fdee;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 6px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 26px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 45px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 6px;
+    height: 51px;
+  }
+  50%, 100% {
+    top: 19px;
+    height: 26px;
+  }
 }
