--- a/results.css
+++ b/results.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
+  z-index: 1000;
 }
 
 h2 {
@@ -14,6 +15,12 @@ p {
   margin-right: 4px;
 }
 
+h1 {
+  font-family: 'Circular', sans-serif;
+  font-size: 40px;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+}
 .navbar {
   /*background-color: #3e2723;*/
   background-color: #F5F5F5;
@@ -53,7 +60,7 @@ p {
   padding-top: 15px;
   padding-left: 10px;
   font-size: 17px;
-  color: white;
+  color: #3e2723;
 
 }
 
@@ -418,6 +425,8 @@ p {
 }
 
 .featurebar {
+
+  overflow: hidden;
   width:900px;
   margin-left: auto;
   margin-right: auto;
@@ -425,6 +434,7 @@ p {
 
 .mainsearch {
   padding-top: 10px;
+  margin-bottom: 100px;
   width: 900px;
   height: 100px;
   margin-left: auto;
@@ -432,12 +442,15 @@ p {
 }
 
 .feature {
-  background-color: #F5F5F5;
+  /*background-color: #F5F5F5;*/
   width: 910px;
   height: 530px;
   margin-left: auto;
   margin-right: auto;
+  z-index: 400;
+  position: relative;
 }
+
 .led-box {
   position: absolute;
   margin-top: -290px;
@@ -486,4 +499,64 @@ p {
     from { background-color: #F00; }
     50% { background-color: #A00; box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 0;}
     to { background-color: #F00; }
+}
+#myVideo {
+  opacity: 0.8;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 300;
+}
+
+#myVideob {
+  position: fixed;
+  opacity: 0.8
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 300;
+}
+
+
+.homepagecard {
+  background-color: #F5F5F5;
+}
+
+.searchinfilterhome input[type=text] {
+  height: 75px;
+  padding: 10px;
+  font-size: 17px;
+  border: 0px solid grey;
+  float: left;
+  width: 90%;
+  background: #F5F5F5;
+  border-radius: 7px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.19);
+
+
+  /*background: #f1f1f1;*/
+
+}
+
+.searchinfilterhome button {
+  height: 75px;
+  float: left;
+  width: 8%;
+  margin-left: 10px;
+  padding: 10px;
+  background: #07f29c;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  border-radius: 7px;
+  cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.19);
+}
+
+.searchinfilterhome button:hover {
+  background-color: #00ec82;
 }
