moves to filter page

--- a/newcss.css
+++ b/newcss.css
@@ -480,7 +480,7 @@ h1 {
 .feature {
   /*background-color: #F5F5F5;*/
   width: 910px;
-  height: 530px;
+  height: 75%;
   margin-top: 150px;
   margin-left: auto;
   margin-right: auto;
