--- a/results.css
+++ b/results.css
@@ -23,9 +23,10 @@ h1 {
 }
 .navbar {
   /*background-color: #3e2723;*/
-  background-color: #F5F5F5;
+  background-color: white;
   border-bottom: solid;
   border-color: #3e2723;
+  border-width: 1px;
   overflow: hidden;
   position: fixed;
   width: 100%;
@@ -127,10 +128,10 @@ h1 {
   /*border-style: solid;
   border-color: black;
   border-width: 2px;*/
-
+  margin-top: -20px;
   margin-left: 75px;
   width: 300px;
-  height: 600px;
+  height: 670px;
 
 
 }
@@ -139,7 +140,7 @@ h1 {
   position: relative;
   margin-left: 450px;
   padding-top: 10px;
-  background-color: #F5F5F5;
+  background-color: white;
   width: 900px;
   height: 1880px;
 
@@ -560,3 +561,33 @@ h1 {
 .searchinfilterhome button:hover {
   background-color: #00ec82;
 }
+
+.time-button {
+  float: left;
+
+  background-color: #E0E0E0;
+  font-family: sans-serif;
+  border: none;
+  color: #757575;
+  padding: 10px 14px;
+  text-align: center;
+  font-size: 12px;
+  margin: 2px;
+  margin-bottom: 8px;
+
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  margin-left: 5px;
+  border-radius: 23px;
+}
+
+.time-button-wrapper {
+  margin-left: 40px;
+}
+
+
+
+
+
