--- a/newcss.css
+++ b/newcss.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
-
+  /*font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
 }
 
 html {
@@ -59,6 +59,12 @@ h1 {
   text-decoration: none;
   font-size: 17px;
 
+}
+
+.newnav a:hover {
+  /*background-color: lightgrey;*/
+  background-color: #07f29c;
+  -webkit-transition-duration: 0.4s;
 }
 
 .logoimage {
@@ -171,7 +177,7 @@ h1 {
 
 }
 
-.searchresults {
+.searchresults{
   position: relative;
   margin-left: 450px;
   padding-top: 10px;
@@ -566,6 +572,7 @@ h1 {
   height: 75px;
   padding: 10px;
   font-size: 17px;
+  font-family: 'HelveticaNeue';
   border: 0px solid grey;
   float: left;
   width: 90%;
@@ -600,7 +607,7 @@ h1 {
 
 .bottomlevel {
   width: 100%;
-  height: 450px;
+  height: auto;
   background-color: white;
   z-index: 1000;
   position: relative;
@@ -665,4 +672,31 @@ html, body {
 
 .scrollbutton:hover {
   opacity: 0.5;
+}
+
+h3 {
+  margin-left: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  color: #616161;
+  font-size: 25px;
+}
+
+.regularbut {
+  float: left;
+  margin-left: 30px;
+  width: 150px;
+  height: 30px;
+
+}
+
+.regularbutend {
+  margin-left: 30px;
+  width: 150px;
+  height: 30px;
+
+}
+
+.searchresults-bottom {
+  margin-top: -20px;
 }
