--- a/results.css
+++ b/results.css
@@ -139,7 +139,7 @@ h1 {
 .searchresults {
   position: relative;
   margin-left: 450px;
-  padding-top: 10px;
+  margin-top: -20px;
   background-color: white;
   width: 900px;
   height: 1880px;
@@ -583,11 +583,32 @@ h1 {
   border-radius: 23px;
 }
 
-.time-button-wrapper {
-  margin-left: 40px;
+.time-button:active {
+  background-color: #07f29c;
 }
 
+.time-button-active {
+  float: left;
 
+  font-family: sans-serif;
+  border: none;
+  color: #757575;
+  padding: 10px 14px;
+  text-align: center;
+  font-size: 12px;
+  margin: 2px;
+  margin-bottom: 8px;
 
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  margin-left: 5px;
+  border-radius: 23px;
+  background-color: #07f29c;
+}
 
-
+.time-button-wrapper {
+  margin-top: -15px;
+  margin-left: 10px;
+}
