--- a/results.css
+++ b/results.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   z-index: 1000;
+  background-color: #F5F5F5;
 }
 
 h2 {
@@ -45,7 +46,7 @@ h1 {
 .navbar a {
   float: left;
   display: block;
-  color: #3e2723;
+
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -64,7 +65,9 @@ h1 {
   color: #3e2723;
 
 }
-
+.notactive {
+  color: #3e2723;
+}
 
 .navbar a:hover {
   /*background-color: lightgrey;*/
@@ -74,7 +77,7 @@ h1 {
 
 .active {
   background-color: #07f29c;
-  color: grey;
+  color: white;
 }
 
 .navbar .icon {
@@ -140,7 +143,7 @@ h1 {
   position: relative;
   margin-left: 450px;
   margin-top: -20px;
-  background-color: white;
+  /*background-color: white;*/
   width: 900px;
   height: 1880px;
 
@@ -611,4 +614,8 @@ h1 {
 .time-button-wrapper {
   margin-top: -15px;
   margin-left: 10px;
+}
+
+#Whenlabel {
+  margin-top: -8px;
 }
