--- a/results.css
+++ b/results.css
@@ -311,6 +311,7 @@ h1 {
   color: white;
   background-color: #5d4037;
   text-align: center;
+  font-size: 15px;
   cursor: pointer;
   width: 100%;
   transition: 0.2s;
