--- a/results.css
+++ b/results.css
@@ -125,7 +125,7 @@ h1 {
 
 .filterbar {
   position: fixed;
-  font-family: Montserrat;
+  font-family: 'Montserrat';
   background-color: #F5F5F5;
   float:left;
   /*border-style: solid;
@@ -302,8 +302,9 @@ h1 {
   display: table;
 }
 
-.title {
+.Event-Category {
   color: grey;
+  font-family: 'Poppins';
 }
 
 .button {
@@ -417,6 +418,13 @@ h1 {
 .ThisWeekEvent {
   color: green;
 }
+
+.Event-Description {
+  font-family: 'Poppins';
+}
+
+
+
 
 #TomorrowEventCard {
   border: solid;
