--- a/newcss.css
+++ b/newcss.css
@@ -741,3 +741,23 @@ h3 {
   max-width: 20px;
   max-height: 20px;
 }
+
+.Event-Category {
+  color: grey;
+  font-family: 'Poppins', sans-serif;
+}
+
+.Event-Description {
+  font-family: 'Poppins', sans-serif;
+}
+
+.Event-Date {
+  font-family: 'Poppins', sans-serif;
+}
+
+.Event-Title {
+  font-family: ;
+}
+
+
+
