--- a/newcss.css
+++ b/newcss.css
@@ -351,6 +351,7 @@ h1 {
   padding: 8px;
   color: white;
   background-color: #5d4037;
+  font-size: 15px;
   text-align: center;
   cursor: pointer;
   width: 100%;
