--- a/results.css
+++ b/results.css
@@ -119,35 +119,35 @@ h1 {
 
 .spacingnav {
   width: 100px;
-  height: 100px;
+  height: 10px;
 
 }
 
-.filterbar {
+/*.filterbar {
   position: fixed;
   font-family: 'Montserrat';
   background-color: #F5F5F5;
   float:left;
   /*border-style: solid;
   border-color: black;
-  border-width: 2px;*/
+  border-width: 2px;
   margin-top: -20px;
   margin-left: 75px;
   width: 300px;
   height: 670px;
 
 
-}
+}*/
 
-.searchresults {
+/*.searchresults {
   position: relative;
-  margin-left: 450px;
+  /*margin-left: 450px;
   margin-top: -20px;
-  /*background-color: white;*/
+  background-color: white;
   width: 900px;
   height: 1880px;
 
-}
+}*/
 
 .loading-child {
   display: none;
@@ -466,13 +466,13 @@ h1 {
   box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2), 0 10px 10px 0 rgba(0,0,0,0.19);
 }
 
-.featurebar {
+/*.featurebar {
 
   overflow: hidden;
   width:900px;
-  margin-left: auto;
+  /*margin-left: 450;
   margin-right: auto;
-}
+}*/
 
 .mainsearch {
   padding-top: 10px;
@@ -486,7 +486,7 @@ h1 {
 .feature {
   /*background-color: #F5F5F5;*/
   width: 910px;
-  height: 530px;
+  /*height: 530px;*/
   margin-left: auto;
   margin-right: auto;
   z-index: 400;
