--- a/newcss.css
+++ b/newcss.css
@@ -332,6 +332,7 @@ h1 {
 
 
 .card {
+  opacity: 1;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.5s;
 }
@@ -377,6 +378,7 @@ h1 {
   width: 100%;
 }
 .UpdateResultsGrey {
+  z-index: 20000;
   background-color: #E0E0E0;
   font-family: sans-serif;
   border: none;
@@ -419,6 +421,7 @@ h1 {
 }
 
 .lds-facebook {
+
   display: none;
   position: fixed;
   width: 64px;
@@ -471,7 +474,7 @@ h1 {
   border-color: red;
 }
 
-.card:hover {
+.card:hover {r
   transition: 0.5s;
   box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2), 0 10px 10px 0 rgba(0,0,0,0.19);
 }
@@ -809,7 +812,7 @@ h3 {
 }
 
 .animationpop {
-  animation: 0.2s fadeIn;
+  animation: 0.5s fadeIn;
 }
 
 .contentpop {
@@ -831,4 +834,37 @@ h3 {
     visibility: visible;
     opacity: 1;
   }
+}
+
+#loading-popup {
+
+  display: inline-block;
+}
+
+.popupwrapper {
+  opacity: 1;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  opacity: 1;
+  margin-left: 75px;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  width: 450px;
+  height: 500px;
+  float: left;
+}
+
+.register-info {
+  width: 300px;
+  height: 500px;
+  background-color: #5d4037;
+  margin-left: 525px;
+  margin-top: 10px;
+  margin-botton: 40px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.moreinfo {
+  display: none;
+  visibility: hidden;
 }
