--- a/results.css
+++ b/results.css
@@ -374,10 +374,10 @@ h1 {
 
 .lds-facebook {
   display: none;
-  position: fixed;
+  /*position: fixed;*/
   width: 64px;
   height: 64px;
-  margin-top: 250px;
+  margin-top: 350px;
   margin-left: 418px;
 }
 .lds-facebook div {
