--- a/results.css
+++ b/results.css
@@ -17,7 +17,7 @@ p {
 }
 
 h1 {
-  font-family: 'Circular', sans-serif;
+  font-family: sans-serif;
   font-size: 40px;
   color: white;
   text-shadow: 2px 2px 4px #000000;
@@ -304,7 +304,7 @@ h1 {
 
 .Event-Category {
   color: grey;
-  font-family: 'Poppins';
+  font-family: Montserrat;
 }
 
 .button {
@@ -319,6 +319,7 @@ h1 {
   cursor: pointer;
   width: 100%;
   transition: 0.2s;
+  font-family: 'Montserrat';
 }
 
 .button:hover {
@@ -332,7 +333,7 @@ h1 {
 }
 .UpdateResultsGrey {
   background-color: #E0E0E0;
-  font-family: sans-serif;
+  font-family: 'Montserrat';
   border: none;
   color: #757575;
   padding: 12px 16px;
@@ -437,16 +438,16 @@ h1 {
 }
 
 .Event-Description {
-  font-family: 'Poppins', sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 
 .Event-Title {
-  font-family: 'Ubuntu';
+  font-family: sans-serif;
 }
 
 
 .Event-Date {
-  font-family: 'Poppins', sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 
 #TomorrowEventCard {
@@ -607,12 +608,12 @@ h1 {
   float: left;
 
   background-color: #E0E0E0;
-  font-family: sans-serif;
+  font-family: 'Montserrat';
   border: none;
   color: #757575;
   padding: 10px 14px;
   text-align: center;
-  font-size: 12px;
+  font-size: 11px;
   margin: 2px;
   margin-bottom: 8px;
 
