--- a/newcss.css
+++ b/newcss.css
@@ -630,7 +630,7 @@ h1 {
 .bottomlevel {
   width: 100%;
   height: auto;
-  opacity: 0.97;
+  /*opacity: 0.97;*/
   background-color: white;
   z-index: 1000;
   position: relative;
@@ -846,9 +846,9 @@ h3 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.5s;
   opacity: 1;
-  margin-left: 75px;
+  /*margin-left: 75px;
   margin-top: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 40px;*/
   width: 450px;
   height: 500px;
   float: left;
@@ -858,15 +858,21 @@ h3 {
   width: 300px;
   height: 500px;
   background-color: #5d4037;
-  margin-left: 525px;
-  margin-top: 10px;
-  margin-bottom: 40px;
+  margin-left: 450px;
+  margin-top: -20px;
+  /*margin-bottom: 40px;*/
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .moreinfo {
   display: none;
   visibility: hidden;
+  position: fixed;
+  margin-top: -1000px;
+  /*width: 900px;
+  height: 1000px;*/
+  z-index: 1000;
+  background-color: white;
 }
 
 
