--- a/results.css
+++ b/results.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   z-index: 1000;
   background-color: #F5F5F5;
 }
