--- a/newcss.css
+++ b/newcss.css
@@ -205,9 +205,10 @@ h1 {
   right: 0;
   bottom: 0;
   width: 900px;
-  height: 1890px;
+  height: 2100px;
   background-color: white;
   opacity: 0.9;
+  z-index: 100;
 
 }
 
@@ -433,8 +434,9 @@ h1 {
   position: fixed;
   width: 64px;
   height: 64px;
-  margin-top: 250px;
+  margin-top: -550px;
   margin-left: 418px;
+  z-index: 100000000000000;
 }
 .lds-facebook div {
   display: inline-block;
@@ -601,7 +603,7 @@ h1 {
   height: 75px;
   padding: 10px;
   font-size: 17px;
-  font-family: 'HelveticaNeue';
+  font-family: 'Montserrat';
   border: 0px solid grey;
   float: left;
   width: 90%;
@@ -636,7 +638,7 @@ h1 {
 
 .bottomlevel {
   width: 100%;
-  height: 2100px;
+  height: 2150px;
   /*opacity: 0.97;*/
   background-color: white;
   z-index: 1000;
@@ -670,9 +672,9 @@ h1 {
   padding-top: 60px;
 }
 #bottombuttonsec a span {
-  z-index: 1000000;
+  z-index: 10;
   position: absolute;
-  top: 2000px;
+  top: 2050px;
   margin-left: -120%;
   background-color: white;
   /*left: 50%;*/
@@ -946,7 +948,7 @@ h3 {
 
 .text-entry {
   margin-left: 47.5px;
-  margin-top: 35px;
+  margin-top: 20px;
   font-size: 12.5px;
   width: 200px;
   height: 50px;
@@ -963,14 +965,14 @@ h3 {
   padding: 20px 60px;
   text-align: center;
   font-size: 17.5px;
-  margin-top: 60px;
+  margin-top: 40px;
   margin-bottom: 8px;
 
   transition: 0.3s;
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
-  margin-left: 57.75px;
+  margin-left: 50px;
   border-radius: 23px;
 }
 
@@ -1030,4 +1032,36 @@ h3 {
   width: 750px;
   height: 500px;
   text-align: center;
+}
+
+.arrow_box {
+	position: absolute;
+  width: 50px;
+  height: 30px;
+	background: #260e04;
+	border: 4px solid #07f29c;
+  z-index: 100000000;
+}
+.arrow_box:after, .arrow_box:before {
+	bottom: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.arrow_box:after {
+	border-color: rgba(38, 14, 4, 0);
+	border-bottom-color: #260e04;
+	border-width: 30px;
+	margin-left: -30px;
+}
+.arrow_box:before {
+	border-color: rgba(7, 242, 156, 0);
+	border-bottom-color: #07f29c;
+	border-width: 36px;
+	margin-left: -36px;
 }
