--- a/newcss.css
+++ b/newcss.css
@@ -257,6 +257,12 @@ h1 {
   font-size: 14px;
 }
 
+#email-notification {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: white;
+}
+
 .container input {
   position: absolute;
   opacity: 0;
@@ -288,6 +294,8 @@ h1 {
   position: absolute;
   display: none;
 }
+
+
 
 .container input:checked ~ .checkmark:after {
   display: block;
@@ -951,7 +959,7 @@ h3 {
   margin-top: 20px;
   font-size: 12.5px;
   width: 200px;
-  height: 50px;
+  height: 40px;
   font-family: 'Montserrat';
 }
 
@@ -965,7 +973,7 @@ h3 {
   padding: 20px 60px;
   text-align: center;
   font-size: 17.5px;
-  margin-top: 40px;
+ 
   margin-bottom: 8px;
 
   transition: 0.3s;
