--- a/newcss.css
+++ b/newcss.css
@@ -1015,6 +1015,37 @@ h3 {
 	 transform: rotate(0deg);
 }
 
+.close-buttona {
+  margin-left: 263px;
+  margin-top: -47px;
+	 height: 50px;
+	 width: 50px;
+	 position: relative;
+	 box-sizing: border-box;
+	 line-height: 50px;
+	 display: inline-block;
+}
+ .close-buttona:before, .close-buttona:after {
+	 transform: rotate(-45deg);
+	 content: '';
+	 position: absolute;
+	 top: 50%;
+	 left: 50%;
+	 margin-top: 0px;
+	 margin-left: -15px;
+	 display: block;
+	 height: 2px;
+	 width: 30px;
+	 background-color: #fff;
+	 transition: all 0.2s ease-out;
+}
+ .close-buttona:after {
+	 transform: rotate(45deg);
+}
+ .close-buttona:hover:before, .close-buttona:hover:after {
+	 transform: rotate(0deg);
+}
+
 .stop-scrolling {
   height: 100%;
   overflow: hidden;
